--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+http://nabilaazh.github.io/<!DOCTYPE html>
 <html>
 <head>
 	<title>Biodataku</title>
@@ -12,6 +12,6 @@ Assalamualaikum, halo semua. Perkenalkan nama saya Nabila Nurkhalizah Ismail, te
 	<li>Alamat : Gg. Kancil 1 No. 99 Kelurahan Lenteng Agung</li>
 	<li>Agama : Islam</li>
 	<li>Sekolah : SMK SMAK Bogor (2018 - 2022) </li>
-	<img src="Nabila.jpg">
+	<img src="nabila.jpeg.jpeg">
 </body>
 </html>
